// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getToggleButtonProps event handlers on keydown arrow down defaultHighlightedIndex is ignored if item is disabled 1`] = `
[
  [
    Americium,
    2,
  ],
  [
    Americium,
    2,
  ],
  [
    Neptunium,
    0,
  ],
]
`;

exports[`getToggleButtonProps event handlers on keydown arrow down initialHighlightedIndex is ignored if item is disabled 1`] = `
[
  [
    Americium,
    2,
  ],
  [
    Neptunium,
    0,
  ],
]
`;

exports[`getToggleButtonProps event handlers on keydown arrow up defaultHighlightedIndex is ignored if item is disabled 1`] = `
[
  [
    Americium,
    2,
  ],
  [
    Americium,
    2,
  ],
  [
    Oganesson,
    25,
  ],
]
`;

exports[`getToggleButtonProps event handlers on keydown arrow up initialHighlightedIndex is ignored if item is disabled 1`] = `
[
  [
    Americium,
    2,
  ],
  [
    Oganesson,
    25,
  ],
]
`;
